--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <h1>Welcome to my GitPracticeSite</h1>
+    <footer>
+      <p>my GitPracticeSite</p>
+    </footer>
   </body>
 </html>
